# Civio

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/commands/: add-api-endpoint.md  run-full-test-suite.md  scaffold-module.md
.github/workflows/: ci.yml
civio-app/: CLAUDE.md  README.md
civio-cloud/: CLAUDE.md  README.md  alembic.ini  pyproject.toml
civio-cloud/src/: __init__.py  main.py
civio-cloud/src/api/v1/: __init__.py  auth.py
civio-cloud/src/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  redis_client.py  security.py
civio-cloud/src/migrations/: env.py
civio-cloud/src/migrations/versions/: 61aa11b09d9f_initial_schema.py
civio-cloud/src/models/: __init__.py  announcement.py  audit_log.py  base.py  billing_record.py  call_log.py  community.py  consent_record.py  enums.py  friend_mapping.py  payment_order.py  processed_event.py  sip_endpoint.py  sync_event.py  sync_state.py  task.py  token_ledger.py  unit.py  user.py  user_unit_relation.py
civio-cloud/src/repositories/: base.py  user_repo.py
civio-cloud/src/schemas/: auth.py
civio-cloud/src/services/: auth_service.py
civio-cloud/tests/: conftest.py
civio-cloud/tests/integration/api/: test_auth_flow.py
civio-cloud/tests/unit/services/: test_auth_service.py
civio-edge/: CLAUDE.md  README.md
docs/: 01-architecture.md  02-database-schema.sql  03-api-contract.yaml  04-sync-protocol.md  05-test-strategy.md  06-security-checklist.md  07-claude-code-playbook.md
scripts/: e2e.sh  init-dev.sh  wait-for.sh
